@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                perlindex
-version:             1.601
+version:             1.602
 abstract:            ~
 license:             ~
 author:              ~
